--- a/style.css
+++ b/style.css
@@ -1,9 +1,35 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+    margin:0;
 }
 
-body {
-    background-color: gray;
+ nav {
+    color:red
+ }
+
+ #hero-section {
+    color: blue;
+ }
+
+#our_story-section {
+    color: green;
+}
+
+#watch-section {
+    color: darkred;
+}
+
+#expertise-section {
+    color: fuchsia;
+}
+
+#team-section {
+    color: yellowgreen;
+}
+
+#contact_client-section {
+    color: lightsalmon;
+}
+
+footer {
+    color: blueviolet;
 }
