--- a/style.css
+++ b/style.css
@@ -31,5 +31,26 @@
 }
 
 footer {
-    color: blueviolet;
+    background-image: url("images/bgk-footer.png");
+	background-size: cover;
+    width: 100%;
+	height: 397px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    line-height: 2em;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 }
+
+.footer-left {
+}
+
+.footer-middle {
+}
+
+.footer-right {
+    display: flex;
+    flex-direction: column;
+}
+
+
