--- a/style.css
+++ b/style.css
@@ -34,15 +34,28 @@ footer {
     background-image: url("images/bgk-footer.png");
 	background-size: cover;
     width: 100%;
-	height: 397px;
-    font-family: Arial, Helvetica, sans-serif;
+	height: 396px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 100;
     color: white;
-    line-height: 2em;
+    line-height: 1.8em;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    align-items: center;
 }
 
 .footer-left {
+}
+
+.footer-logo {
+    font-size: 2em;
+    color: #68d9cd;
+    display: flex;
+    align-items: center;
+}
+
+.footer-logo img {
+    padding-right: 0.5em;
 }
 
 .footer-middle {
@@ -51,6 +64,18 @@ footer {
 .footer-right {
     display: flex;
     flex-direction: column;
+    justify-content: flex-start; /* todo: position */
 }
 
+.footer-right input {
+    background-color: #ffffff00;
+    border: 2px solid #9d9ab0;
+    padding: 1em;
+}
+
+.footer-right button {
+    background-color: #ffffff66;
+    border: none;
+    padding: 0.7em 1.3em 0.4em 1.2em;
+}
 
