--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@
     color: lightsalmon;
 }
 
+/* Footer */
 footer {
     background-image: url("images/bgk-footer.png");
 	background-size: cover;
@@ -39,15 +40,22 @@ footer {
     font-weight: 100;
     color: white;
     line-height: 1.8em;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
-.footer-left {
+/* Grid */
+.footer-wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 2fr 1fr;
+    gap: 10px;
 }
 
 .footer-logo {
+    grid-column: 2/3;
+    grid-row: 1/2;
     font-size: 2em;
     color: #68d9cd;
     display: flex;
@@ -58,24 +66,67 @@ footer {
     padding-right: 0.5em;
 }
 
-.footer-middle {
+.footer-logotext {
+    grid-column: 2/3;
+    grid-row: 2/3;
 }
 
-.footer-right {
+.footer-links {
+    grid-column: 2/3;
+    grid-row: 3/4;
+    display: flex;
+    justify-content: space-between;
+    align-self: flex-end;
+}
+
+.footer-header1 {
+    grid-column: 3/4;
+    grid-row: 1/2;
+    align-self: center;
+}
+
+.footer-address {
+    grid-column: 3/4;
+    grid-row: 2/3;
+    display: grid;
+    grid-template-columns: 30px auto;
+    grid-template-rows: auto auto;
+}
+
+.footer-pic {
+    padding: 5px 10px 0 0;
+}
+
+.footer-header2 {
+    grid-column: 4/5;
+    grid-row: 1/2;
+    align-self: center;
+}
+
+.footer-social {
+    grid-column: 4/5;
+    grid-row: 2/3;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start; /* todo: position */
+    align-items: stretch;
 }
 
-.footer-right input {
+.footer-social input {
     background-color: #ffffff00;
     border: 2px solid #9d9ab0;
     padding: 1em;
 }
 
-.footer-right button {
+.footer-social button {
     background-color: #ffffff66;
     border: none;
     padding: 0.7em 1.3em 0.4em 1.2em;
+}
+
+.footer-copyright {
+    grid-column: 4/5;
+    grid-row: 3/4;
+    text-align: end;
+    align-self: flex-end;
 }
 
