--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ footer {
 	height: 396px;
     font-family: 'Roboto', sans-serif;
     font-weight: 100;
+    font-size: 1rem;
     color: white;
     line-height: 1.8em;
     display: flex;
@@ -79,10 +80,21 @@ footer {
     align-self: flex-end;
 }
 
+.footer-links a {
+    color: white;
+    text-decoration: none;
+}
+
+.footer-links a:hover {
+    color: #68d9cd;
+}
+
 .footer-header1 {
     grid-column: 3/4;
     grid-row: 1/2;
     align-self: center;
+    font-size: 1.1em;
+    font-weight: bold;
 }
 
 .footer-address {
@@ -101,6 +113,8 @@ footer {
     grid-column: 4/5;
     grid-row: 1/2;
     align-self: center;
+    font-size: 1.1em;
+    font-weight: bold;
 }
 
 .footer-social {
@@ -108,19 +122,35 @@ footer {
     grid-row: 2/3;
     display: flex;
     flex-direction: column;
-    align-items: stretch;
+    justify-content: space-between;
 }
 
 .footer-social input {
     background-color: #ffffff00;
-    border: 2px solid #9d9ab0;
-    padding: 1em;
+    border: 1px solid #9d9ab0;
+    margin: 0 0.5em 1em 0;
+    padding: 0.9em;
+    font-size: 1em;
+}
+
+.footer-social input::placeholder {
+    color: #9d9ab0;
 }
 
 .footer-social button {
     background-color: #ffffff66;
     border: none;
-    padding: 0.7em 1.3em 0.4em 1.2em;
+    height: 3.6em;
+    padding-top: 0.4em;
+}
+
+.footer-social img {
+    padding-right: 0.2em;
+}
+
+.footer-form {
+    display: grid;
+    grid-template-columns: 4fr 1fr;
 }
 
 .footer-copyright {
