--- a/style.css
+++ b/style.css
@@ -26,8 +26,75 @@
     color: yellowgreen;
 }
 
+
+/* Contact-Client */
 #contact_client-section {
-    color: lightsalmon;
+    margin: 3em 0;
+}
+
+.contact_client-wrapper {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+}
+
+.contact_client-content {
+    grid-column: 2/3;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 3em;
+}
+
+.contact_client-content h2 {
+    margin-bottom: 1.3em;
+    font-family: 'Playfair Display', serif;
+    font-size: 1.4rem;
+    text-transform: uppercase;
+}
+
+.contact_client-form {
+    display: flex;
+    flex-direction: column;
+}
+
+/* all direct children of form */
+.contact_client-form form > * {
+    margin-bottom: 1.5em;
+    padding: 1em;
+    font-family: 'Roboto', sans-serif;
+    font-size: 1em;
+    border: 1px solid #00000022;
+}
+
+/* placeholder properties for all direct children of class */
+.contact_client-form > *::placeholder {
+    color: #413d4b77;
+}
+
+.contact_client-form button {
+    align-self: flex-start;
+    background-color: white;
+    color: #68d9cd;
+    border: 2px solid #68d9cd;
+    border-radius: 2px;
+    font-family: 'Hammersmith One', sans-serif;
+    font-size: 1.1rem;
+    text-transform: uppercase;
+    padding: 0.6em 2.3em;
+}
+
+.contact_client-customers {
+    display: flex;
+    flex-direction: column;
+}
+
+.contact_client-logos {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.contact_client-logos img {
+    max-width: 180px;
+    margin:0 50px 50px 0;
 }
 
 /* Footer */
