--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@
     grid-column: 2/3;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 3em;
+    gap: 7em;
 }
 
 .contact_client-content h2 {
@@ -90,11 +90,16 @@
 .contact_client-logos {
     display: flex;
     flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: center;
 }
 
 .contact_client-logos img {
-    max-width: 180px;
-    margin:0 50px 50px 0;
+    margin: 0.9em 0 1.6em 0;
+}
+
+.contact_client-logos img:nth-child(odd) {
+    margin-right: 6em;
 }
 
 /* Footer */
