--- a/style.css
+++ b/style.css
@@ -82,6 +82,20 @@
     padding: 0.6em 2.3em;
 }
 
+.contact_client-form button:hover { 
+    background-color: #68d9cd;
+    color:white;
+    text-shadow: 1px 1px 1px #9d9ab0;
+}
+
+.contact_client-form button:active { 
+    background-color: #68d9cd;
+    color:white;
+    border-color: white;
+    box-shadow: inset 0 0 20px white;
+    text-shadow: -1px -1px 1px #9d9ab0;
+}
+
 .contact_client-customers {
     display: flex;
     flex-direction: column;
