--- a/style.css
+++ b/style.css
@@ -22,10 +22,111 @@
     color: fuchsia;
 }
 
+/* Team */
 #team-section {
-    color: yellowgreen;
+    background-image: url("images/bgk-middle.png");
+	background-size: cover;
+    width: 100%;
+	height: 550px;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
+#team-section .headers {
+    font-family: 'Playfair Display', serif;
+    margin-bottom: 1em;
+}
+
+#team-section h2 {
+    font-size: 1.3em;
+    font-weight: bold;
+}
+
+.team-wrapper {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    gap: 1.6em
+}
+
+.team-members {
+    grid-column: 2/3;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 2em;
+}
+
+.team-member {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    border: 1px solid white;
+}
+
+.team-member h4 {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 700;
+    font-size: 1em;
+    text-transform: uppercase;
+    margin-top: 0.8em;
+}
+
+.team-member p {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 100;
+    font-size: 0.8em;
+    text-transform: uppercase;
+    color: #fafafa99;
+    margin: 0.8em 0;
+}
+
+.team-placeholder {
+    width: 100%;
+    height: 15em;
+    background-color: white;
+}
+
+/* todo: fix box-size for correct border display */
+.team-names {
+    border: 1px solid white;
+}
+
+.team-member1 {
+    grid-column: 1/2;
+}
+
+.team-member2 {
+    grid-column: 2/3;
+}
+
+.team-member3 {
+    grid-column: 3/4;
+}
+
+.team-member4 {
+    grid-column: 4/5;
+}
+
+.team-join {
+    font-family: 'Roboto', sans-serif;
+    font-size: 0.8em;
+    font-weight: 100;
+    margin: 1.5em;
+}
+
+#team-section button {
+    font-family: 'Hammersmith One', sans-serif;
+    font-size: 1em;
+    text-transform: uppercase;
+    color: #68d9cd;
+    background-color: transparent;
+    border: 1px solid #68d9cd;
+    border-radius: 2px;
+    padding: 0.6em 0.9em;
+}
 
 /* Contact-Client */
 #contact_client-section {
