--- a/style.css
+++ b/style.css
@@ -205,10 +205,10 @@ hr {
 
 /* Team */
 #team-section {
-    background-image: url("images/bgk-middle.png");
+    background-image: url("images/bgk-header.png");
     background-size: cover;
     width: 100%;
-    height: 550px;
+    height: 670px;
     color: white;
     display: flex;
     flex-direction: column;
@@ -222,8 +222,18 @@ hr {
 }
 
 #team-section h2 {
-    font-size: 1.3em;
-    font-weight: bold;
+    font-size: 1.4rem;
+    text-transform: uppercase;
+}
+
+#team-section h3 {
+    font-size: 0.9em;
+    color: #f9f9f9;
+}
+
+hr.team-style {
+    border: 1px solid #ffffff22;
+    width: 50px;
 }
 
 .team-wrapper {
@@ -238,13 +248,18 @@ hr {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 2em;
+    margin: 2em 0;
 }
 
 .team-member {
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 1px solid white;
+    border: 1px solid #e1e1e177;
+}
+
+.team-member img {
+    width: 100%;
 }
 
 .team-member h4 {
@@ -252,7 +267,7 @@ hr {
     font-weight: 700;
     font-size: 1em;
     text-transform: uppercase;
-    margin-top: 0.8em;
+    margin-top: 2em;
 }
 
 .team-member p {
@@ -261,18 +276,13 @@ hr {
     font-size: 0.8em;
     text-transform: uppercase;
     color: #fafafa99;
-    margin: 0.8em 0;
+    margin: 0.8em 0 2em 0;
 }
 
 .team-placeholder {
     width: 100%;
     height: 15em;
     background-color: white;
-}
-
-/* todo: fix box-size for correct border display */
-.team-names {
-    border: 1px solid white;
 }
 
 .team-member1 {
@@ -294,19 +304,10 @@ hr {
 .team-join {
     font-family: 'Roboto', sans-serif;
     font-size: 0.8em;
-    font-weight: 100;
+    font-weight: 300;
+    color: #f3f3f3;
+    letter-spacing: 0.1em;
     margin: 1.5em;
-}
-
-#team-section button {
-    font-family: 'Hammersmith One', sans-serif;
-    font-size: 1em;
-    text-transform: uppercase;
-    color: #68d9cd;
-    background-color: transparent;
-    border: 1px solid #68d9cd;
-    border-radius: 2px;
-    padding: 0.6em 0.9em;
 }
 
 /* Contact-Client */
@@ -340,7 +341,7 @@ hr {
 }
 
 /* all direct children of form */
-.contact_client-form form>* {
+.contact_client-form form > * {
     margin-bottom: 1.5em;
     padding: 1em;
     font-family: 'Roboto', sans-serif;
@@ -349,13 +350,13 @@ hr {
 }
 
 /* placeholder properties for all direct children of class */
-.contact_client-form>*::placeholder {
+.contact_client-form > * ::placeholder {
     color: #413d4b77;
 }
 
 .contact_client-form button {
     align-self: flex-start;
-    background-color: white;
+    background-color: transparent;
     color: #68d9cd;
     border: 2px solid #68d9cd;
     border-radius: 2px;
