--- a/style.css
+++ b/style.css
@@ -510,7 +510,7 @@ footer {
     grid-row: 2/3;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-start;
 }
 
 .footer-social input {
