--- a/style.css
+++ b/style.css
@@ -31,32 +31,40 @@
 .container .story-image img {
   width: 100%;
   height: 70%;
+  justify-content: left;
 }
 
 .container .story .content p {
-  font-size: 15px;
-  line-height: 26px;
+  /*font-size: 15px;
+  line-height: 26px;*/
   padding-bottom: 15px;
   padding-top: 15px;
+  text-align: left;
+  font-family: "Roboto";
+  font-size: 14px;
+  font-weight: 300;
+  font-style: normal;
+  letter-spacing: normal;
+  line-height: 22px;
   color: grey;
+
 }
 
-.container .story .content h3 {
+.container .story .content h2 {
   padding-top: 10%;
+  font-family: "PlayfairDisplay";
+  font-size: 22px;
+  font-size: 1.4rem;
 }
 
 button {
   margin-left: auto;
   margin-right: auto;
-  background-color: white;
-  border-color: rgb(18, 212, 212);
-  border-style: solid;
-  text-align: center;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  padding-left: 7px;
-  padding-right: 7px;
-  color: rgb(18, 212, 212);
+  font-family: 'Hammersmith One', sans-serif;
+  color: #68d9cd;
+  background-color: transparent;
+  border: 2px solid #68d9cd;
+  padding: 0.5em 0.6em;
 }
 
 .button {
@@ -80,6 +88,10 @@ button {
   justify-content: center;
 }
 
+.container2 h5 {
+  font-family: "Roboto";
+}
+
 .container2 .watch-story .video-image {
   text-align: center;
 }
@@ -92,12 +104,14 @@ button {
 
 #our-expertise {
   text-align: center;
+
 }
 
-#our-expertise h3 {
+#our-expertise h2 {
   text-align: center;
   padding-top: 50px;
   padding-bottom: 5px;
+  font-family: 'Playfair Display';
 }
 
 #our-expertise p {
@@ -188,6 +202,11 @@ hr {
 .grid-wrapper .item p {
   padding-top: 15px;
   color: grey;
+  font-family: 'Roboto';
+}
+
+.grid-wrapper .item h5 {
+  font-family: 'Roboto';
 }
 
 .grid-wrapper .item img {
