--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
 * {
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
     box-sizing: border-box;
-    font-style: inherit;
 }
 
 nav {
@@ -12,8 +11,7 @@ nav {
 #hero-section {
     color: blue;
 }
-
-
+/* our story*/
 .container {
     max-width: 768px;
     display: grid;
@@ -40,32 +38,40 @@ nav {
 .container .story-image img {
     width: 100%;
     height: 70%;
+    justify-content: left;
 }
 
 .container .story .content p {
-    font-size: 15px;
-    line-height: 26px;
+    /*font-size: 15px;
+    line-height: 26px;*/
     padding-bottom: 15px;
     padding-top: 15px;
+    text-align: left;
+    font-family: "Roboto";
+    font-size: 14px;
+    font-weight: 300;
+    font-style: normal;
+    letter-spacing: normal;
+    line-height: 22px;
     color: grey;
+
 }
 
-.container .story .content h3 {
+.container .story .content h2 {
     padding-top: 10%;
+    font-family: "PlayfairDisplay";
+    font-size: 22px;
+    font-size: 1.4rem;
 }
 
 button {
     margin-left: auto;
     margin-right: auto;
-    background-color: white;
-    border-color: rgb(18, 212, 212);
-    border-style: solid;
-    text-align: center;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    padding-left: 7px;
-    padding-right: 7px;
-    color: rgb(18, 212, 212);
+    font-family: 'Hammersmith One', sans-serif;
+    color: #68d9cd;
+    background-color: transparent;
+    border: 2px solid #68d9cd;
+    padding: 0.5em 0.6em;
 }
 
 .button {
@@ -89,6 +95,10 @@ button {
     justify-content: center;
 }
 
+.container2 h5 {
+    font-family: "Roboto";
+}
+
 .container2 .watch-story .video-image {
     text-align: center;
 }
@@ -98,15 +108,17 @@ button {
     text-align: center;
     padding-top: 10px;
 }
-
+/* Expertise ----*/
 #our-expertise {
     text-align: center;
+
 }
 
-#our-expertise h3 {
+#our-expertise h2 {
     text-align: center;
     padding-top: 50px;
     padding-bottom: 5px;
+    font-family: 'Playfair Display';
 }
 
 #our-expertise p {
@@ -169,6 +181,8 @@ hr {
     padding-right: 23px;
     padding-top: 1rem;
     padding-left: 23px;
+
+
 }
 
 .grid-wrapper div:nth-child(5) {
@@ -195,354 +209,14 @@ hr {
 .grid-wrapper .item p {
     padding-top: 15px;
     color: grey;
+    font-family: 'Roboto';
+}
+
+.grid-wrapper .item h5 {
+    font-family: 'Roboto';
 }
 
 .grid-wrapper .item img {
     padding-top: 15px;
     padding-bottom: 30px;
-}
-
-
-/* Team */
-#team-section {
-    background-image: url("images/bgk-middle.png");
-    background-size: cover;
-    width: 100%;
-    height: 550px;
-    color: white;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-#team-section .headers {
-    font-family: 'Playfair Display', serif;
-    margin-bottom: 1em;
-}
-
-#team-section h2 {
-    font-size: 1.3em;
-    font-weight: bold;
-}
-
-.team-wrapper {
-    width: 100%;
-    display: grid;
-    grid-template-columns: 1fr 3fr 1fr;
-    gap: 1.6em
-}
-
-.team-members {
-    grid-column: 2/3;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    gap: 2em;
-}
-
-.team-member {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border: 1px solid white;
-}
-
-.team-member h4 {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 700;
-    font-size: 1em;
-    text-transform: uppercase;
-    margin-top: 0.8em;
-}
-
-.team-member p {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 100;
-    font-size: 0.8em;
-    text-transform: uppercase;
-    color: #fafafa99;
-    margin: 0.8em 0;
-}
-
-.team-placeholder {
-    width: 100%;
-    height: 15em;
-    background-color: white;
-}
-
-/* todo: fix box-size for correct border display */
-.team-names {
-    border: 1px solid white;
-}
-
-.team-member1 {
-    grid-column: 1/2;
-}
-
-.team-member2 {
-    grid-column: 2/3;
-}
-
-.team-member3 {
-    grid-column: 3/4;
-}
-
-.team-member4 {
-    grid-column: 4/5;
-}
-
-.team-join {
-    font-family: 'Roboto', sans-serif;
-    font-size: 0.8em;
-    font-weight: 100;
-    margin: 1.5em;
-}
-
-#team-section button {
-    font-family: 'Hammersmith One', sans-serif;
-    font-size: 1em;
-    text-transform: uppercase;
-    color: #68d9cd;
-    background-color: transparent;
-    border: 1px solid #68d9cd;
-    border-radius: 2px;
-    padding: 0.6em 0.9em;
-}
-
-/* Contact-Client */
-#contact_client-section {
-    margin: 3em 0;
-}
-
-.contact_client-wrapper {
-    display: grid;
-    grid-template-columns: 1fr 3fr 1fr;
-}
-
-.contact_client-content {
-    grid-column: 2/3;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 7em;
-}
-
-.contact_client-content h2 {
-    margin-bottom: 1.3em;
-    font-family: 'Playfair Display', serif;
-    font-size: 1.4rem;
-    text-transform: uppercase;
-    gap: 7em;
-}
-
-.contact_client-form {
-    display: flex;
-    flex-direction: column;
-}
-
-/* all direct children of form */
-.contact_client-form form>* {
-    margin-bottom: 1.5em;
-    padding: 1em;
-    font-family: 'Roboto', sans-serif;
-    font-size: 1em;
-    border: 1px solid #00000022;
-}
-
-/* placeholder properties for all direct children of class */
-.contact_client-form>*::placeholder {
-    color: #413d4b77;
-}
-
-.contact_client-form button {
-    align-self: flex-start;
-    background-color: white;
-    color: #68d9cd;
-    border: 2px solid #68d9cd;
-    border-radius: 2px;
-    font-family: 'Hammersmith One', sans-serif;
-    font-size: 1.1rem;
-    text-transform: uppercase;
-    padding: 0.6em 2.3em;
-}
-
-.contact_client-form button:hover {
-    background-color: #68d9cd;
-    color: white;
-    text-shadow: 1px 1px 1px #9d9ab0;
-}
-
-.contact_client-form button:active {
-    background-color: #68d9cd;
-    color: white;
-    border-color: white;
-    box-shadow: inset 0 0 20px white;
-    text-shadow: -1px -1px 1px #9d9ab0;
-}
-
-.contact_client-customers {
-    display: flex;
-    flex-direction: column;
-}
-
-.contact_client-logos {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    align-items: center;
-}
-
-.contact_client-logos img {
-    margin: 0.9em 0 1.6em 0;
-}
-
-.contact_client-logos img:nth-child(odd) {
-    margin-right: 6em;
-}
-
-/* adjust margins and gaps depending on screen size */
-@media only screen and (min-width:768px) and (max-width: 1599px) {
-    .contact_client-logos img:nth-child(odd) {
-        margin-right: 2em;
-    }
-
-    .contact_client-content {
-        gap: 2em;
-    }
-}
-
-/* change grid layout depending on screen size */
-@media only screen and (min-width:768px) and (max-width: 1240px) {
-    .contact_client-wrapper {
-        grid-template-columns: 1fr 8fr 1fr;
-    }
-}
-
-/* Footer */
-footer {
-    background-image: url("images/bgk-footer.png");
-    background-size: cover;
-    width: 100%;
-    height: 396px;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 100;
-    font-size: 1rem;
-    color: white;
-    line-height: 1.8em;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-/* Grid */
-.footer-wrapper {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 2fr 1fr;
-    gap: 10px;
-}
-
-.footer-logo {
-    grid-column: 2/3;
-    grid-row: 1/2;
-    font-size: 2em;
-    color: #68d9cd;
-    display: flex;
-    align-items: center;
-}
-
-.footer-logo img {
-    padding-right: 0.5em;
-}
-
-.footer-logotext {
-    grid-column: 2/3;
-    grid-row: 2/3;
-}
-
-.footer-links {
-    grid-column: 2/3;
-    grid-row: 3/4;
-    display: flex;
-    justify-content: space-between;
-    align-self: flex-end;
-}
-
-.footer-links a {
-    color: white;
-    text-decoration: none;
-}
-
-.footer-links a:hover {
-    color: #68d9cd;
-}
-
-.footer-header1 {
-    grid-column: 3/4;
-    grid-row: 1/2;
-    align-self: center;
-    font-size: 1.1em;
-    font-weight: bold;
-}
-
-.footer-address {
-    grid-column: 3/4;
-    grid-row: 2/3;
-    display: grid;
-    grid-template-columns: 30px auto;
-    grid-template-rows: auto auto;
-}
-
-.footer-pic {
-    padding: 5px 10px 0 0;
-}
-
-.footer-header2 {
-    grid-column: 4/5;
-    grid-row: 1/2;
-    align-self: center;
-    font-size: 1.1em;
-    font-weight: bold;
-}
-
-.footer-social {
-    grid-column: 4/5;
-    grid-row: 2/3;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
-
-.footer-social input {
-    background-color: #ffffff00;
-    border: 1px solid #9d9ab0;
-    margin: 0 0.5em 1em 0;
-    padding: 0.9em;
-    font-size: 1em;
-}
-
-.footer-social input::placeholder {
-    color: #9d9ab0;
-}
-
-.footer-social button {
-    background-color: #ffffff66;
-    border: none;
-    height: 3.6em;
-    padding-top: 0.4em;
-}
-
-.footer-social img {
-    padding-right: 0.2em;
-}
-
-.footer-form {
-    display: grid;
-    grid-template-columns: 4fr 1fr;
-}
-
-.footer-copyright {
-    grid-column: 4/5;
-    grid-row: 3/4;
-    text-align: end;
-    align-self: flex-end;
 }
